# datasuit

./: README.md
backend/: pyproject.toml
backend/app/: constants.py  engine.py  schemas.py  validation.py
backend/app/actions/: base.py  cast.py  drop.py  filter.py  mask.py  select.py  sort.py
backend/app/core/: constants.py
backend/app/engine/: cast_type.py  compute_stats.py  condition_factory.py  mask_factory.py  pipeline_executor.py  query_engine.py
backend/app/io/: export.py  load.py  serde.py
backend/app/operations/: base.py  cast.py  condition.py  conditions.py  drop.py  filter.py  insert.py  rename.py  replace.py  select.py  sort.py
backend/app/operations/condition/: base.py  comparison.py  logical.py  membership.py  null.py  string.py
backend/app/schemas/: __init__.py  base.py  conditions.py  dataset.py  filter.py  pipeline.py  query.py
backend/app/schemas/api/: requests.py  responses.py
backend/app/utils/: base.py  cast  compose.py  drop.py  filter.py  mask.py  select.py  sort.py
backend/tests/: conftest.py  test_validation.py
backend/tests/engine/: test_cast_type.py  test_compute_stats.py  test_condition_factory.py  test_pipeline_executor.py
backend/tests/io/: test_load.py  test_serde.py
backend/tests/operations/: test_base.py  test_cast.py  test_conditions.py  test_drop.py  test_filter.py  test_insert.py  test_rename.py  test_replace.py  test_select.py  test_sort.py
backend_simplified/: engine.py  io.py  schemas.py
