[project]
name = "datasuit-backend"
version = "0.1.0"
description = "Backend for Pandas-Visual-Flow No-Code Data Suite"
dependencies = [
    "fastapi",
    "pandas",
    "pydantic",
    "openpyxl",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
